--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cachetools==3.1.1
 certifi==2019.11.28
 chardet==3.0.4
 elasticsearch==7.1.0
+enum34==1.1.6
 gast==0.2.2
 google-auth==1.9.0
 google-auth-oauthlib==0.4.1
@@ -21,13 +22,13 @@ nltk==3.4.5
 numpy==1.17.4
 oauthlib==3.1.0
 opt-einsum==3.1.0
-pkg-resources==0.0.0
 protobuf==3.11.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
+singledispatch==3.4.0.3
 six==1.13.0
 tensorboard==1.15.0
 tensorflow-estimator==1.15.1
